# isochoric

./: .gitignore  .gitmodules  3D_phase_envelope.py  CMakeLists.txt  Elsevier_journals.mplstyle  README.md  environment.yml  run_iso.py  setup.py  threeD_phase_envelope.py
.github/workflows/: runcatch.yml
include/isochoric/: Helm.h  abstract_tracer.h  complex_derivatives.h  coolprop_tracer.h  cubic_provider.h  generalizedcubic.h  mixderiv.h  parametric_isochoric.h  providers.h  residual_functions.h
notebooks/: interactive_parameters.ipynb
src/: check_cubics.cpp  tests.cpp  tracer.cpp
src/catch_tests/: catch_tests.cpp
wrappers/DLL/: CMakeLists.txt  ISOCHOR.h  refprop_funcs.cpp  refprop_provider.h  refprop_tracer.cpp  test_dll.py  test_isochor_dll.xlsm  tests.cxx
